--- a/views/legal/vop.ejs
+++ b/views/legal/vop.ejs
@@ -4,8 +4,7 @@
     <div class="row">
       <div class="col-12">
         <h3 class="mb-3">
-          Smlouva o poskytování vzdělávacího obsahu a Všeobecné obchodní
-          podmínky
+          Smlouva o užívání portálu Edookio a Všeobecné obchodní podmínky
         </h3>
       </div>
     </div>
@@ -36,11 +35,10 @@
       <div class="col-11">
         <p>
           Obchodní podmínky upravují vztahy mezi poskytovatelem a uživatelem
-          vzniklé v souvislosti nebo na základě Smlouvy o poskytování
-          vzdělávacího obsahu (dále jen „Smlouva“), uzavírané mezi
-          poskytovatelem a uživatelem prostřednictvím internetových stránek
-          umístněných na internetové adrese www.edookio.com (dále jen
-          „internetový portál“).
+          vzniklé v souvislosti nebo na základě Smlouvy o užívání portálu
+          Edookio (dále jen „Smlouva“), uzavírané mezi poskytovatelem a
+          uživatelem prostřednictvím internetových stránek umístněných na
+          internetové adrese www.edookio.com (dále jen „internetový portál“).
         </p>
       </div>
     </div>
@@ -51,10 +49,12 @@
       <div class="col-11">
         <p>
           Na základě Smlouvy se poskytovatel zavazuje umožnit uživateli přístup
-          ke vzdělávacím materiálům umístěným na internetovém portálu, přičemž
-          část vzdělávacích materiálů je poskytována bezplatně a část za
-          pravidelnou úplatu (předplatné). Přístup k bezplatně poskytovaným
-          materiálům není podmíněn zakoupením předplatného.
+          k portálu a jeho funkcím, které zahrnují zejména možnost vytváření
+          opakovacích kartiček a testových otázek prostřednictvím umělé
+          inteligence i manuálně a přístup k tomuto obsahu prostřednictvím
+          webové a mobilní aplikace. Vybrané funkce portálu jsou dostupné
+          zdarma, ostatní funkce jsou dostupné pouze po aktivaci předplatného
+          Premium.
         </p>
       </div>
     </div>
@@ -99,8 +99,6 @@
           internetovém portálu zřídí poskytovatel uživateli bezplatně
           uživatelský účet (dále jen „uživatelský účet“), ke kterému může
           uživatel přistupovat prostřednictvím internetového portálu.
-          Prostřednictvím svého uživatelského účtu může uživatel zejména
-          přistupovat ke vzdělávacím materiálům.
         </p>
       </div>
     </div>
@@ -162,6 +160,62 @@
         </p>
       </div>
     </div>
+    <div class="row">
+      <div class="col-1">
+        <p>2.6</p>
+      </div>
+      <div class="col-11">
+        <p>
+          Rozsah služeb poskytovaných bezplatně a rozsah služeb poskytovaných v
+          rámci předplatného Premium je uveden v ceníku poskytovatele
+          <a href="/premium">zde</a>.
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-1">
+        <p>2.7</p>
+      </div>
+      <div class="col-11">
+        <p>
+          Generování opakovacích kartiček a testových otázek prostřednictvím
+          umělé inteligence je omezeno tzv. AI kredity. AI kredity jsou každý
+          měsíc automaticky obnovovány dle limitů pro účty Free a Premium dle
+          aktuálního ceníku. Po vyčerpání AI kreditů je možné AI kredity
+          jednorázově dokoupit v internetovém portálu.
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-1">
+        <p>2.8</p>
+      </div>
+      <div class="col-11">
+        <p>
+          Obsah vygenerovaný prostřednictvím umělé inteligence je autorským
+          dílem poskytovatele. Veškerá vlastnická a autorská práva náleží
+          poskytovateli. Uživatel je oprávněn tento obsah využívat pro vlastní
+          potřebu a sdílet jej prostřednictvím internetového portálu s dalšími
+          uživateli. Uživatel je povinen dodržovat autorská práva a práva
+          třetích osob k obsahu, ze kterého obsah generuje. Za případné porušení
+          nese odpovědnost výhradně uživatel.
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-1">
+        <p>2.8</p>
+      </div>
+      <div class="col-11">
+        <p>
+          Uživatel bere na vědomí, že prostřednictvím funkce sdílení mohou k
+          obsahu získat přístup i další uživatelé internetového portálu.
+          Uživatel je povinen dodržovat autorská práva a práva třetích osob k
+          obsahu, který prostřednictvím internetového portálu sdílí.
+        </p>
+      </div>
+    </div>
 
     <div class="row">
       <div class="col-12">
@@ -213,9 +267,7 @@
           Přístup k základním vzdělávacím materiálům je uživateli poskytován
           bezplatně. Uživatel je oprávněn dle své úvahy aktivovat pravidelné
           měsíční nebo roční předplatné dle ceníku poskytovatele a získat tak
-          přístup k balíčku Premium (rozšířené vzdělávací materiály). Základní a
-          rozšířené vzdělávací materiály jsou na internetovém portálu adekvátně
-          označeny a odlišeny.
+          přístup k balíčku Premium.
         </p>
       </div>
     </div>
@@ -265,16 +317,18 @@
       <div class="col-11">
         <p>
           Výše předplatného ke dni účinnosti těchto obchodních podmínek činí 229
-          Kč měsíčně, 890 Kč za půl roku nebo 1 490 Kč ročně. V případě aktivace
-          předplatného prostřednictvím mobilní aplikace (Apple Pay / Google Play
-          Store) činí výše měsíčního předplatného 249 Kč.
+          Kč měsíčně nebo 1 490 Kč ročně. V případě aktivace předplatného
+          prostřednictvím mobilní aplikace (Apple Pay / Google Play Store) činí
+          výše měsíčního předplatného 249 Kč.
         </p>
       </div>
     </div>
 
     <div class="row">
       <div class="col-12">
-        <h6>V. Poskytování přístupu ke vzdělávacím materiálům</h6>
+        <h6>
+          V. Poskytování přístupu k funkcím a obsahu internetového portálu
+        </h6>
       </div>
     </div>
     <div class="row">
@@ -283,9 +337,9 @@
       </div>
       <div class="col-11">
         <p>
-          Poskytování přístupu ke vzdělávacím materiálům (dále také „služba“)
-          bude zahájeno okamžikem uzavřením Smlouvy a vytvořením uživatelského
-          účtu.
+          Poskytování přístupu k funkcím a obsahu internetového portálu (dále
+          také „služba“) bude zahájeno okamžikem uzavřením Smlouvy a vytvořením
+          uživatelského účtu.
         </p>
       </div>
     </div>
@@ -435,9 +489,9 @@
       </div>
       <div class="col-11">
         <p>
-          Poskytovatel plní vadně zejména pokud po delší časový úsek nejsou
-          vzdělávací materiály dostupné, a to z důvodu na straně poskytovatele,
-          za které nese odpovědnost a mohl je ovlivnit.
+          Poskytovatel plní vadně zejména pokud po delší časový úsek není služba
+          dostupná, a to z důvodu na straně poskytovatele, za které nese
+          odpovědnost a mohl je ovlivnit.
         </p>
       </div>
     </div>
@@ -462,8 +516,9 @@
         <p>
           Uživatel je oprávněn uplatnit vady služeb u poskytovatele
           prostřednictvím e-mailové adresy edookio@edookio.cz, a to bez
-          zbytečného odkladu poté, co vadu zjistil. V reklamaci je uživatel
-          povinen přesně specifikovat, v čem vada spočívá nebo jak se projevuje.
+          zbytečného odkladu poté, co vadu zjistil, nejpozději však do jednoho
+          měsíce od vzniku vady. V reklamaci je uživatel povinen přesně
+          specifikovat, v čem vada spočívá nebo jak se projevuje.
         </p>
       </div>
     </div>
