--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -66,6 +66,9 @@
                 </li>-->
         <% if (currentUser) { %>
         <li class="nav-item">
+          <a class="nav-link" href="/">Mé studium</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/category/dashboard">Předměty</a>
         </li>
         <li class="nav-item">
@@ -91,7 +94,7 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            Můj účet
+            <i class="far fa-user"></i> Můj účet
           </a>
           <ul class="dropdown-menu vybrat-predmet">
             <li>
