--- a/views/category.ejs
+++ b/views/category.ejs
@@ -213,6 +213,13 @@
                 <%= section.cards.length %> kartiček / <%=
                 section.questions.length %> otázek
               </p>
+              <a
+                href="#"
+                class="text-small"
+                data-bs-toggle="modal"
+                data-bs-target="#studySectionModal<%=section._id%>"
+                ><i class="fas fa-book"></i> Studovat</a
+              >
             </div>
             <div>
               <% if (isAuthor) { %>
@@ -842,6 +849,51 @@ category.sections.forEach(section => { %>
         >
           <button class="btn btn-sm btn-danger">Ano, odstranit</button>
         </form>
+      </div>
+    </div>
+  </div>
+</div>
+<% }) %> <% } %> <% if (category.sections.length > 0 && isAuthor) { %> <%
+category.sections.forEach(section => { %>
+<!-- MODAL - Study section -->
+<div class="modal fade" id="studySectionModal<%=section._id%>" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered edit-modal">
+    <div class="modal-content">
+      <div class="modal-body">
+        <div class="row mx-2">
+          <div class="col-12 d-flex flex-row justify-content-between">
+            <div style="opacity: 0">X</div>
+            <h5 class="mt-4 mb-3"><%= section.name %></h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+            ></button>
+          </div>
+        </div>
+
+        <div class="row mb-2 mt-2 mx-3">
+          <% section.cards?.forEach(card => { %>
+          <div class="mb-2">
+            <div><%- card.pageB %></div>
+          </div>
+          <% }) %>
+        </div>
+
+        <div
+          class="d-flex flex-row justify-content-center align-items-center mx-3"
+        >
+          <a
+            href="/category/<%= category._id %>/section/<%= section._id %>/card30/1?mode=unknown"
+            class="btn btn-sm btn-danger btn-spustit w-100 mt-1 mx-1 mb-2"
+            >Kartičky <i class="fas fa-chevron-right mx-1"></i
+          ></a>
+          <a
+            href="/category/<%= category._id %>/section/<%= section._id %>/test"
+            class="btn btn-sm btn-danger btn-spustit w-100 mt-1 mx-1 mb-2"
+            >Otázky <i class="fas fa-chevron-right mx-1"></i
+          ></a>
+        </div>
       </div>
     </div>
   </div>
