--- a/public/css/leaderboard.css
+++ b/public/css/leaderboard.css
@@ -1,4 +1,4 @@
-/* PALETTE #E80F88 #AF0171 #790252 #4C0033 */
+/* PALETTE #FF0037 #d2002d #790252 #4C0033 */
 main {
   background: linear-gradient(
     to bottom,
