--- a/views/category.ejs
+++ b/views/category.ejs
@@ -261,7 +261,7 @@
               <div>
                 <a
                   href="/category/<%= category._id %>/section/<%= section._id %>/card30/1?mode=unknown"
-                  class="btn btn-sm btn-danger btn-spustit w-100 mt-2"
+                  class="btn btn-sm btn-outline-danger btn-spustit w-100 mt-2"
                   >Spustit</a
                 >
               </div>
@@ -279,7 +279,7 @@
               <div>
                 <a
                   href="/category/<%= category._id %>/section/<%= section._id %>/card30/1?mode=unknown"
-                  class="btn btn-sm btn-danger btn-spustit w-100 mt-2 disabled"
+                  class="btn btn-sm btn-outline-danger btn-spustit w-100 mt-2 disabled"
                   >Spustit</a
                 >
               </div>
@@ -321,7 +321,7 @@
               <div>
                 <a
                   href="/category/<%= category._id %>/section/<%= section._id %>/test"
-                  class="btn btn-sm btn-danger btn-spustit w-100 mt-2"
+                  class="btn btn-sm btn-outline-danger btn-spustit w-100 mt-2"
                   >Spustit</a
                 >
               </div>
@@ -339,7 +339,7 @@
               <div>
                 <a
                   href="/category/<%= category._id %>/section/<%= section._id %>/test"
-                  class="btn btn-sm btn-danger btn-spustit w-100 mt-2 disabled"
+                  class="btn btn-sm btn-outline-danger btn-spustit w-100 mt-2 disabled"
                   >Spustit</a
                 >
               </div>
