--- a/views/home.ejs
+++ b/views/home.ejs
@@ -122,7 +122,7 @@
                     5){ %> dny <% } else { %> dní <% } %> v řadě
                   </p>
 
-                  <hr style="color: #e80f88" />
+                  <hr style="color: #FF0037" />
                   <p class="header mb-2">Můj přehled</p>
                   <ul class="stats-list text-smaller">
                     <li class="stats-item">
