--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -474,7 +474,7 @@
                       </tr>
 
                       <tr>
-                        <th scope="row">Extra 1 000 AI kreditů do začátku</th>
+                        <th scope="row">Extra 300 AI kreditů do začátku</th>
                         <td><i class="fas fa-check text-success"></i></td>
                         <td><i class="fas fa-check text-success"></i></td>
                         <td><i class="fas fa-check text-success"></i></td>
