--- a/views/index.ejs
+++ b/views/index.ejs
@@ -246,10 +246,7 @@
         </div>
       </div>
 
-      <section
-        class="proc-edookio"
-        style="background-color: rgb(254, 240, 255)"
-      >
+      <section class="proc-edookio" style="background-color: #fffbf8">
         <div class="container">
           <div class="row pb-3">
             <div class="col-md-10 offset-md-1">
@@ -476,10 +473,7 @@
         </div>
       </section>
 
-      <section
-        class="proc-edookio"
-        style="background-color: rgb(254, 240, 255)"
-      >
+      <section class="proc-edookio" style="background-color: #fffbf8">
         <div class="container">
           <div class="row">
             <div class="col-md-10 offset-md-1 my-5">
