--- a/views/category.ejs
+++ b/views/category.ejs
@@ -853,7 +853,7 @@ category.sections.forEach(section => { %>
     </div>
   </div>
 </div>
-<% }) %> <% } %> <% if (category.sections.length > 0 && isAuthor) { %> <%
+<% }) %> <% } %> <% if (category.sections.length > 0) { %> <%
 category.sections.forEach(section => { %>
 <!-- MODAL - Study section -->
 <div class="modal fade" id="studySectionModal<%=section._id%>" tabindex="-1">
