--- a/views/category.ejs
+++ b/views/category.ejs
@@ -859,7 +859,7 @@ category.sections.forEach(section => { %>
 <div class="modal fade" id="studySectionModal<%=section._id%>" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered edit-modal">
     <div class="modal-content">
-      <div class="modal-body">
+      <div class="modal-body" style="height: 90vh; overflow-y: auto">
         <div class="row mx-2">
           <div class="col-12 d-flex flex-row justify-content-between">
             <div style="opacity: 0">X</div>
