--- a/views/home.ejs
+++ b/views/home.ejs
@@ -172,7 +172,7 @@
                 <div class="col-12 mb-4">
                   <div class="card border-grey">
                     <div
-                      class="card-body card-info d-flex flex-row align-items-center justify-content-around"
+                      class="card-body d-flex flex-row align-items-center justify-content-around"
                     >
                       <h5 class="text-center mb-0">
                         Ověř prosím svou <b>e-mailovou adresu</b>
