--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -68,12 +68,6 @@ body {
   background-blend-mode: darken;
 }
 
-.card-info {
-  background: linear-gradient(135deg, rgb(221, 195, 127), rgb(245, 235, 200));
-  /* Optional: To ensure backward compatibility */
-  background-color: rgb(221, 195, 127); /* Fallback for older browsers */
-}
-
 /*STREAK BOX*/
 .streak-box {
   background-color: white;
@@ -170,7 +164,7 @@ body {
 }
 
 .streak-card:nth-child(2) svg circle:last-of-type {
-  stroke: #ff0037;
+  stroke: #ff6e1e;
 }
 
 .landing-img {
