--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -179,6 +179,21 @@
     </div>
   </div>
   <div class="row">
+    <div class="col-md-6 mb-3 pt-3">
+      <div class="card stats p-3 mt-3">
+        <h6 class="mb-3">Statistiky událostí</h6>
+        <% allStats.map( stat => { %>
+        <div class="row">
+          <div class="col-md-10">
+            <p><%= stat.eventName %></p>
+          </div>
+          <div class="col-md-2"><%= stat.eventCount %></div>
+        </div>
+        <% }) %>
+      </div>
+    </div>
+  </div>
+  <div class="row">
     <div class="col-12 mb-1 mt-4">
       <h5>Nastavení webu</h5>
     </div>
